--- a/src/VNEDC/warehouse/templates/warehouse/bin/bin_transfer.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bin/bin_transfer.html
@@ -99,7 +99,7 @@
 
 </script>
 {% endblock %}
-{% block container %}
+{% block content %}
     <div class="container">
         <h3>Bin Transfer</h3>
         <div id="jsGrid"></div>
