--- a/src/VNEDC/warehouse/templates/warehouse/work_order_search.html
+++ b/src/VNEDC/warehouse/templates/warehouse/work_order_search.html
@@ -134,7 +134,7 @@
 
 </script>
 {% endblock %}
-{% block container %}
+{% block content %}
     <h3>Search Work Order</h3>
     <input type="text" id="workOrder" placeholder="Work Order">
     <button id="searchBtn" class="btn btn-primary">Search</button>
