--- a/src/VNEDC/warehouse/templates/warehouse/bases/base.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bases/base.html
@@ -12,29 +12,49 @@
 
     }
     </style>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">{% endblock %}
+
+{% endblock %}
 
 {% block ready %}{% endblock ready %}
 
 {% block container %}
-    <div class="container mt-5">
-            <div class="row">
-                {% block sidebar %}
-                <div class="col-sm-2">
-                    <div class="list-group">
-                        <a class="btn btn-primary custom-edit mb-2" href="{% url "warehouse_list"%}" role="button">{% trans "Edit" %}</a>
-                        {% for wh in warehouse_items %}
-                            <a class="btn btn-primary custom-width mb-2" href="{% url "show_warehouse" wh.wh_code %}" role="button">{{ wh }}</a>
-                        {% endfor %}
-                    </div>
+    <div class="card-header">
+        <div class="row">
+            <div>
+                <div class="btn-group">
+                    <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    作業功能
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'packing_material_stock_in' %}">包材倉入庫單</a></li>
+                        <li><a class="dropdown-item" href="{% url 'packing_material_stock_out' %}">包材倉出庫單</a></li>
+                        <li><a class="dropdown-item" href="{% url 'bin_transfer_page' %}">調撥作業</a></li>
+                        <hr />
+                        <li><a class="dropdown-item" href="#">調帳作業</a></li>
+                    </ul>
                 </div>
-                {% endblock %}
-                <div class="col-sm-10">
-                {% block content %} {% endblock %}
+                <div class="btn-group">
+                    <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    查詢功能
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="{% url 'bin_search' %}">庫存查詢</a></li>
+                        <li><a class="dropdown-item" href="{% url 'work_order_page' %}">訂單查詢</a></li>
+                        <li><a class="dropdown-item" href="{% url 'work_order_bin_search' %}">交易紀錄</a></li>
+                    </ul>
+                </div>
+                <div class="btn-group">
+                    <button class="btn btn-info dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    基本資料
+                    </button>
+                    <ul class="dropdown-menu dropdown-menu-dark">
+                        <li><a class="dropdown-item" href="{% url 'warehouse_list' %}">儲位設定</a></li>
+                    </ul>
                 </div>
             </div>
+        </div>
     </div>
-
+    {% block content %} {% endblock %}
 {% endblock %}
 
 {% block alert %}
