--- a/src/VNEDC/warehouse/templates/warehouse/bin/bin_by_area.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bin/bin_by_area.html
@@ -24,12 +24,10 @@
 </style>
 {% endblock %}
 
-{% block container %}
+{% block content %}
     <div class="container mt-5">
         <div class="row">
-            {% block sidebar %} {{ block.super }} {% endblock %}
-            {% block content %}
-            <div class="col-sm-9" style="border: 1px #6c757d solid; height: 90vh;">
+            <div class="col-12">
                 <h2 class="mb-4">{% trans "Bin List By Area" %}</h2>
                 <div class="row d-flex justify-content-center">
                     <a class="btn btn-primary mb-3" style="width: 70px" href="{% url 'bin_create' area_code %}" role="button">{% trans "Add" %}</a>
@@ -50,7 +48,7 @@
                         <!-- Lặp qua danh sách warehouse -->
                         {% for bin in bins %}
                         <tr>
-                            <td>{{ forloop.counter }}</td>
+                            <td style="text-align: center">{{ forloop.counter }}</td>
                             <td>{{ bin.bin_id }}</td>
                             <td>{{ bin.bin_name }}</td>
                             <td>{{ bin.area }}</td>
@@ -82,7 +80,6 @@
                 <p>{% trans "No bins found." %}</p>
                 {% endif %}
             </div>
-            {% endblock %}
         </div>
     </div>
 
