--- a/src/VNEDC/warehouse/templates/warehouse/dashboard.html
+++ b/src/VNEDC/warehouse/templates/warehouse/dashboard.html
@@ -5,18 +5,9 @@
 {% block title %} {% trans "Dashboard" %} {% endblock %}
 {% block css %}{% endblock %}
 
-{% block container %}
+{% block content %}
 <div class="container mt-5">
     <h1 class="text-center">Warehouse Dashboard</h1>
-    <div class="d-flex justify-content-center mt-4">
-        <a href="{% url 'stock_in' %}" class="btn btn-success mx-2">
-            <i class="fas fa-arrow-down"></i>
-            Stock In
-        </a>
-        <a href="{% url 'stock_out' %}" class="btn btn-danger mx-2">
-            <i class="fas fa-arrow-up"></i>
-            Stock Out
-        </a>
-    </div>
+
 </div>
 {% endblock %}
