--- a/src/VNEDC/warehouse/templates/warehouse/search_bin_history.html
+++ b/src/VNEDC/warehouse/templates/warehouse/search_bin_history.html
@@ -1,4 +1,4 @@
-{% extends 'bases/base.html' %}
+{% extends 'warehouse/bases/base.html' %}
 {% load crispy_forms_tags %}
 {% load static %}
 {% load i18n %}
@@ -36,7 +36,7 @@
     </style>
 {% endblock %}
 
-{% block container %}
+{% block content %}
 
 <div class="container-fluid">
 
