--- a/src/VNEDC/warehouse/templates/warehouse/stock_out.html
+++ b/src/VNEDC/warehouse/templates/warehouse/stock_out.html
@@ -497,7 +497,7 @@
 </script>
 {% endblock %}
 
-{% block container %}
+{% block content %}
 <div class="row p-3">
     <div class="col-1"></div>
     <div class="col-10">
