--- a/src/VNEDC/warehouse/templates/warehouse/packing_material_stock_out.html
+++ b/src/VNEDC/warehouse/templates/warehouse/packing_material_stock_out.html
@@ -356,7 +356,7 @@
                 },
 
                 {#{ name: "desc", type: "text", width: 200, title: "Comment", align: "center", editing: true },#}
-                { name: "product_order", type: "text", width: 150, title: "Product Order", validate: "required", editing: false },
+                { name: "product_order", type: "text", width: 150, title: "{% trans "Product Order" %}", validate: "required", editing: false },
                 {#{ name: "customer_no", type: "text", width: 100, title: "Customer No", validate: "required", editing: false },#}
                 { name: "version_no", type: "text", width: 120, title: "Version No", align: "center", editing: false },
                 { name: "version_seq", type: "number", width: 120, title: "Version Seq", editing: false },
@@ -502,18 +502,18 @@
     <div class="col-1"></div>
     <div class="col-10">
         <div class="row">
-            <div class="col p-3" style="font-size: 1.5em;text-align: center;">包裝材料倉庫出貨單</div>
+            <div class="col p-3" style="font-size: 1.5em;text-align: center;">{% trans "Packing Material Stock Out" %}</div>
         </div>
     <form id="myForm">
         {% crispy form %}
         <div id="jsGrid"></div>
             <div id="numberPicker" style="display:none; position:fixed; top:20%; left:30%; width:300px; padding:20px; background:#fff; border:1px solid #ccc; box-shadow:0 2px 10px rgba(0,0,0,0.2);">
-            <h3>選擇儲格</h3>
+            <h3>{% trans "Choose Location" %}</h3>
             {% for bin in bins %}
             <button class="number-btn" data-value="{{ bin.bin_id }}" style="{% if bin.has_stock %}background-color: #d2e8b9{% else %}; background-color: #fff{% endif %}">{{ bin.bin_id }}</button>
             {% endfor %}
             <br><br>
-            <button id="closePicker">關閉</button>
+            <button id="closePicker">{% trans "Close" %}</button>
         </div>
 
           <!-- Popup -->
@@ -544,7 +544,7 @@
           </div>
         <hr />
         <div style="text-align: center" class="p-3">
-            <button id="postDataButton">過帳</button>
+            <button id="postDataButton">{% trans "Post" %}</button>
         </div>
     </form>
 
