--- a/src/VNEDC/warehouse/templates/warehouse/bases/base.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bases/base.html
@@ -28,9 +28,8 @@
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'packing_material_stock_in' %}">{% trans "Packing Material Stock In" %}</a></li>
                         <li><a class="dropdown-item" href="{% url 'packing_material_stock_out' %}">{% trans "Packing Material Stock Out" %}</a></li>
-                        <li><a class="dropdown-item" href="{% url 'bin_transfer_page' %}">{% trans "Quantity Transfer" %}</a></li>
                         <hr />
-                        <li><a class="dropdown-item" href="#">{% trans "Quantity Adjust" %}</a></li>
+                        <li><a class="dropdown-item" href="{% url 'work_order_page' %}">{% trans "Quantity Transfer And Adjust" %}</a></li>
                     </ul>
                 </div>
                 <div class="btn-group">
@@ -39,7 +38,6 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="{% url 'bin_search' %}">{% trans "Inventory Search" %}</a></li>
-                        <li><a class="dropdown-item" href="{% url 'work_order_page' %}">{% trans "Search by Product Order" %}</a></li>
                         <li><a class="dropdown-item" href="{% url 'work_order_bin_search' %}">{% trans "Transaction History" %}</a></li>
                     </ul>
                 </div>
