--- a/src/VNEDC/warehouse/templates/warehouse/work_order_bin_search.html
+++ b/src/VNEDC/warehouse/templates/warehouse/work_order_bin_search.html
@@ -5,11 +5,6 @@
 {% block title %} {% trans "Transaction" %} {% endblock %}
 
 {% block css %}
-
-    <script src="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid-theme.min.css" />
-
     <style>
         h3 {
             text-align: center;
@@ -55,14 +50,18 @@
             sorting: true,
             paging: true,
             fields: [
-                { name: "product_order", title: "Work Order", type: "text", width: 30, css: "text-center" },
-                { name: "purchase_no", title: "Purchase", type: "text", width: 25, css: "text-center" },
-                { name: "mvt_id", title: "Mvt", type: "text", width: 25, css: "text-center" },
+                { name: "product_order", title: "Product Order", type: "text", width: 30, css: "text-center" },
+                { name: "purchase_no", title: "Purchase Order", type: "text", width: 25, css: "text-center" },
+                { name: "version_no", title: "Version No.", type: "text", width: 25, css: "text-center" },
+                { name: "version_seq", title: "Version Seq.", type: "text", width: 25, css: "text-center" },
+                { name: "size", title: "Size", type: "text", width: 25, css: "text-center" },
                 { name: "bin_id", title: "Bin", type: "text", width: 25, css: "text-center" },
+                { name: "mvt_id", title: "Mvt", type: "text", width: 25, css: "text-center" },
                 { name: "plus_qty", title: "+", type: "text", width: 25, css: "text-center" },
                 { name: "minus_qty", title: "-", type: "text", width: 25, css: "text-center" },
                 { name: "remain_qty", title: "Qty", type: "text", width: 25, css: "text-center" },
-                { name: "create_at", title: "Create at", type: "number", width: 40, css: "text-center" },
+                { name: "create_at", title: "Create at", type: "text", width: 40, css: "text-center" },
+                { name: "create_by__username", title: "Create by", type: "text", width: 40, css: "text-center" },
             ]
         });
 
@@ -90,15 +89,15 @@
 {% endblock %}
 
 {% block content %}
-    <h3 class="mb-4">Search Work Order & Bin</h3>
+    <h3 class="mb-4">Search Product Order & Location</h3>
     <div class="row" style="padding-left: 60px;padding-bottom: 30px;">
         <div class="col-md-5">
-                <label for="workOrder" class="mr-2">Work Order:</label>
-                <input type="text" id="workOrder" class="form-control" placeholder="Enter Work Order">
+                <label for="workOrder" class="mr-2">Product Order:</label>
+                <input type="text" id="workOrder" class="form-control" placeholder="Enter Product Order">
         </div>
         <div class="col-md-5">
-                <label for="Bin" class="mr-2">Bin:</label>
-                <input type="text" id="bin" class="form-control" placeholder="Enter Bin">
+                <label for="Bin" class="mr-2">Location:</label>
+                <input type="text" id="bin" class="form-control" placeholder="Enter Location">
         </div>
         <div class="col-md-2 d-flex align-items-end">
                 <button id="searchBtn" class="btn btn-primary">Search</button>
