--- a/src/VNEDC/warehouse/templates/warehouse/bin/bin_adjust.html
+++ b/src/VNEDC/warehouse/templates/warehouse/bin/bin_adjust.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% load static %}
 {% load i18n %}
-{% block title %} {% trans "Location Transfer" %} {% endblock %}
+{% block title %} {% trans "Quantity Adjust" %} {% endblock %}
 {% block css %}
     <style>
         form {
@@ -32,7 +32,6 @@
 
     <script>
     $(document).ready(function() {
-        // Parse URL parameters
         let params = new URLSearchParams(window.location.search);
         let warehouse = params.get("warehouse");
         let productOrder = params.get("product_order");
@@ -43,7 +42,6 @@
         let bin = params.get("bin");
         let qty = params.get("qty");
 
-        // Prepare data for transfer
         let itemData = {
             warehouse,
             productOrder,
@@ -93,7 +91,7 @@
 {% endblock %}
 {% block content %}
     <div class="container">
-        <h3>Location Transfer</h3>
+        <h3>Quantity Adjust</h3>
         <div id="jsGrid"></div>
         <form method="post">
             {% crispy form %}
