--- a/src/VNEDC/warehouse/templates/warehouse/packing_material_stock_in.html
+++ b/src/VNEDC/warehouse/templates/warehouse/packing_material_stock_in.html
@@ -82,9 +82,6 @@
 {% endblock css %}
 {% block base_js %}
 {{ block.super }}
-<script src="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid-theme.min.css" />
 <script>
     $(document).ready(function() {
         let isInputClicked = false;
@@ -306,7 +303,7 @@
                     }
                 },
                 { name: "id", type: "number", width: 50, title: "ID", align: "center", readOnly: true, visible: false },
-                { name: "order_qty", type: "text", width: 100, title: "Order Qty" },
+                { name: "order_qty", type: "text", width: 100, title: "Order Qty", align: "right" },
                 {
                     name: "order_bin",
                     type: "text",
@@ -407,18 +404,18 @@
 
                 { name: "desc", type: "text", width: 200, title: "Comment", align: "center", editing: true },
                 { name: "product_order", type: "text", width: 100, title: "Product Order", validate: "required", editing: false },
-                { name: "customer_no", type: "text", width: 100, title: "Customer No", validate: "required", editing: false },
-                { name: "version_no", type: "text", width: 120, title: "Version No", align: "center", editing: false },
-                { name: "version_seq", type: "number", width: 70, title: "Version Seq", editing: false },
+                { name: "purchase_no", type: "text", width: 130, title: "Purchase No", validate: "required", editing: false },
+                { name: "version_no", type: "text", width: 120, title: "Version No", validate: "required", align: "center", editing: false },
+                { name: "version_seq", type: "number", width: 70, title: "Version Seq", validate: "required", editing: false },
+                { name: "size", type: "text", width: 50, title: "Size", validate: "required", editing: false },
                 { name: "lot_no", type: "text", width: 130, title: "Lot No", editing: false },
-                { name: "size", type: "text", width: 50, title: "Size", editing: false },
                 { name: "purchase_qty", type: "text", width: 100, title: "Purchase Qty", editing: false },
                 { name: "purchase_unit", type: "text", width: 100, title: "Purchase Unit", editing: false },
-                { name: "packing_type", type: "text", width: 100, title: "Packing Type", editing: false },
                 { name: "item_type", type: "text", width: 120, title: "Item Type", editing: false },
                 { name: "post_date", type: "text", width: 100, title: "Post Date", editing: false },
+                { name: "packing_type", type: "text", width: 100, title: "Packing Type", editing: false },
                 { name: "supplier", type: "text", width: 100, title: "Supplier", editing: false },
-                { name: "purchase_no", type: "text", width: 130, title: "Purchase No", editing: false },
+                { name: "customer_no", type: "text", width: 100, title: "Customer No", editing: false },
                 { name: "sap_mtr_no", type: "text", width: 100, title: "Mtr No", editing: false },
             ]
         });
@@ -483,7 +480,7 @@
 
             // 使用 Ajax 發送數據到後端
             $.ajax({
-                url: '{% url 'stock_in_post' %}',  // 設置後端接收數據的 URL
+                url: '{% url 'packing_material_stock_in_post' %}',  // 設置後端接收數據的 URL
                 type: 'POST',
                 contentType: 'application/json',
                 data: jsonData,
@@ -558,7 +555,7 @@
           </div>
         <hr />
         <div style="text-align: center" class="p-3">
-            <button id="postDataButton">{% trans "Post" %}</button>
+            <button id="postDataButton" class="btn btn-info btn-lg">{% trans "Post" %}</button>
         </div>
     </form>
 
