--- a/src/VNEDC/warehouse/templates/warehouse/packing_material_stock_out.html
+++ b/src/VNEDC/warehouse/templates/warehouse/packing_material_stock_out.html
@@ -82,9 +82,6 @@
 {% endblock css %}
 {% block base_js %}
 {{ block.super }}
-<script src="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.js"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid.min.css" />
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jsgrid/dist/jsgrid-theme.min.css" />
 <script>
     $(document).ready(function() {
         let isInputClicked = false;
@@ -113,70 +110,9 @@
         });
 
 
-        $("#create").on("click", function() {
-            add_item();
-        });
-
-        function add_item() {
-            const order_qty =$("#id_order_qty").val();
-            const order_bin =$("#id_order_bin").val();
-            const desc =$("#id_desc").val();
-            const product_order =$("#id_product_order").val();
-            const version_no =$("#id_version_no").val();
-            const lot_no =$("#id_lot_no").val();
-            const item_type =$("#id_item_type").val();
-            const packing_type =$("#id_packing_type").val();
-            const purchase_no =$("#id_purchase_no").val();
-            const purchase_qty =$("#id_purchase_qty").val();
-            const size =$("#id_size").val();
-            const purchase_unit =$("#id_purchase_unit").val();
-            const post_date =$("#id_post_date").val();
-            const supplier =$("#id_supplier").val();
-            const sap_mtr_no =$("#id_sap_mtr_no").val();
-            const customer_no =$("#id_customer_no").val();
-            const version_seq = $("#id_version_seq").val();
-
-            const newItem = {
-                order_qty: order_qty,
-                order_bin: order_bin,
-                desc: desc,
-                customer_no: customer_no,
-                product_order: product_order,
-                version_no: version_no,
-                version_seq: version_seq,
-                lot_no: lot_no,
-                item_type: item_type,
-                packing_type: packing_type,
-                purchase_no: purchase_no,
-                purchase_qty: purchase_qty,
-                size: size,
-                purchase_unit: purchase_unit,
-                post_date: post_date,
-                supplier: supplier,
-                sap_mtr_no: sap_mtr_no
-            };
-
-            // Lấy dữ liệu hiện tại của jsGrid
-            var gridData = $("#jsGrid").jsGrid("option", "data");
-
-            // Thêm mục mới vào dữ liệu grid
-            gridData.push(newItem);
-
-            // Cập nhật lại dữ liệu cho jsGrid
-            $("#jsGrid").jsGrid("option", "data", gridData);
-            $("#jsGrid").jsGrid("refresh");
-            $('html, body').animate({
-                scrollTop: $(document).height()
-            }, 1000);
-
-            alert("New item added successfully!");
-        }
-
-
         $("#id_product_order").on("change", function() {
             get_order_info();
         });
-
 
         get_order_info = function() {
 
@@ -212,7 +148,7 @@
             var purchase_no = $("#id_purchase_no").val();
             {#alert(purchase_no);#}
             $.ajax({
-                url: '{% url 'get_purchase_no_info' %}', type: 'post',
+                url: '{% url 'get_purchase_no_stout' %}', type: 'post',
                 dataType: 'json',
                 async: false,
                 data: {"csrfmiddlewaretoken": "{{ csrf_token }}", "purchase_no": purchase_no},
@@ -243,175 +179,46 @@
             sorting: true,    // 啟用排序功能
             paging: true,     // 啟用分頁功能
 
-
-
             rowClick: function (args) {
-                // 禁止點擊行進入編輯模式
-                console.log("行被點擊，但不進入編輯模式", args.item);
+                this.editItem(args.item);
             },
 
             data: [],   // 將 JSON 資料導入表格
 
             fields: [
-                { type: "control" }, // 控制欄位 (編輯/刪除按鈕)
+                {
+                    type: "control",
+                    width: 80,
+                    itemTemplate: function(_, item) {
+                        // 建立刪除按鈕
+                        var deleteButton = $("<button>")
+                            .addClass("btn btn-danger btn-sm") // Bootstrap 樣式（可選）
+                            .text("Delete")
+                            .on("click", function(e) {
+                                e.stopPropagation(); // 防止觸發行點擊事件
+                                $("#jsGrid").jsGrid("deleteItem", item);
+
+                            });
+
+                        return deleteButton;
+                    }
+                },
                 { name: "id", type: "number", width: 50, title: "ID", align: "center", readOnly: true, visible: false },
-                { name: "order_qty", type: "text", width: 100, title: "Order Qty" },
-                {
-                    name: "order_bin",
-                    type: "text",
-                    width: 120,
-                    title: "Order Bin",
-                    itemTemplate: function (value) {
-                        return value; // Hiển thị nội dung
-                    },
-                    editTemplate: function (value, item) {
-
-
-
-                        const $input = $("<input>").val(value).addClass("form-control input-custom").css({
-                                            "padding-right": "1px"
-                                       });
-
-                        var $button = $("<button>")
-                                       .addClass("btn btn-primary")
-                                       .css({
-                                           width: "auto",
-                                           height: "40px"
-                                       });
-
-
-                        var $container = $("<div>").addClass("row").css({
-                                            "--bs-gutter-x": "0"
-                                        })
-                                       .append($("<div>")
-                                       .addClass("col-md-10")
-                                       .css({
-                                           "margin-right": "2px",
-                                           "width": "78px"
-                                       })
-                                       .append($input))
-                                       .append($("<div>").addClass("col-md-2").append($button)); // Button chiếm col-2
-
-                        // pass this data to jsgrid
-                        this._input = $input;
-                        {#this._input = $button;#}
-
-
-                        $button.on("click", function () {
-
-                            $("#zonePopup").fadeIn(); // Hiển thị pop-up
-
-                            $("#zonePopup").data("updateInput", (newValue) => {
-                                $input.val(newValue); // 更新輸入框的值
-                            });
-
-                        });
-
-
-                        // Đóng popup khi click bên ngoài nội dung
-                        $(document).on('click', function(event) {
-                            if (
-                                !$(event.target).closest('#popupContent').length &&
-                                !$(event.target).closest('#id_order_bin').length
-                            ) {
-                                // Kiểm tra nếu không click vào #popupContent và #id_order_bin
-                                if (!isInputClicked) {
-                                    $('#zonePopup').fadeOut(); // Đóng popup
-                                }
-
-                                if ($(event.target).closest('#popupOverlay').length) {
-                                    isInputClicked = false; // Đặt giá trị false nếu nhấp vào popupOverlay
-                                    $('#zonePopup').fadeOut();
-                                    console.log('Clicked on popupOverlay. isInputClicked =', isInputClicked);
-                                }
-                            }
-                        });
-
-
-                            {#// Remember position of current page#}
-                            {#var scrollPosition = $(window).scrollTop();#}
-                            {##}
-                            {#//Restore position of current page#}
-                            {#$(window).scrollTop(scrollPosition);#}
-
-                        // Hiển thị pop-up khi click vào $button
-                        $button.on("click", function (event) {
-                            event.preventDefault();
-
-                            isInputClicked = true;
-                            $("#zonePopup").fadeIn();
-
-                            console.log(isInputClicked)
-
-                        });
-
-                        return $container;
-                    },
-                    insertValue: function () {
-                        return this._input.val(); // Trả về giá trị khi chèn
-                    },
-                    editValue: function () {
-                        return this._input.val(); // Trả về giá trị khi chỉnh sửa
-                    }
-                },
-
-                {#{ name: "desc", type: "text", width: 200, title: "Comment", align: "center", editing: true },#}
-                { name: "product_order", type: "text", width: 150, title: "{% trans "Product Order" %}", validate: "required", editing: false },
-                {#{ name: "customer_no", type: "text", width: 100, title: "Customer No", validate: "required", editing: false },#}
-                { name: "version_no", type: "text", width: 120, title: "Version No", align: "center", editing: false },
-                { name: "version_seq", type: "number", width: 120, title: "Version Seq", editing: false },
-                {#{ name: "lot_no", type: "text", width: 130, title: "Lot No", editing: false },#}
-                { name: "size", type: "text", width: 50, title: "Size", editing: false },
-                {#{ name: "purchase_qty", type: "text", width: 100, title: "Purchase Qty", editing: false },#}
-                {#{ name: "purchase_unit", type: "text", width: 100, title: "Purchase Unit", editing: false },#}
-                {#{ name: "packing_type", type: "text", width: 100, title: "Packing Type", editing: false },#}
-                {#{ name: "item_type", type: "text", width: 120, title: "Item Type", editing: false },#}
-                {#{ name: "post_date", type: "text", width: 100, title: "Post Date", editing: false },#}
-                {#{ name: "supplier", type: "text", width: 100, title: "Supplier", editing: false },#}
-                { name: "purchase_no", type: "text", width: 130, title: "Purchase No", editing: false },
-                {#{ name: "sap_mtr_no", type: "text", width: 100, title: "Mtr No", editing: false },#}
-                {
-                    name: "copy", // 自定義控制欄欄位名稱
-                    title: "操作", // 欄位標題
-                    align: "center", // 置中對齊
-                    width: 150, // 欄位寬度
-                    itemTemplate: function (_, item) {
-                        // 自定義「複製」按鈕
-                        const $copyButton = $("<button>")
-                            .text("複製")
-                            .addClass("btn btn-info")
-                            .on("click", (e) => {
-                                {#e.preventDefault();#}
-                                {#e.stopPropagation();#}
-
-                                // 獲取當前行的索引
-                                const gridData = $("#jsGrid").jsGrid("option", "data");
-                                const index = gridData.indexOf(item);
-
-                                // 複製行並修改內容
-                                const newItem = { ...item };
-                                newItem.id = Date.now(); // 新的唯一 ID
-                                newItem.order_bin = "";
-                                newItem.order_qty = "";
-
-                                // 插入到當前行的下方
-                                gridData.splice(index + 1, 0, newItem);
-
-                                // 重新載入數據
-                                $("#jsGrid").jsGrid("option", "data", gridData);
-
-                                alert("複製並插入到該行下方成功！");
-                            });
-
-                        return $copyButton;
-                    }
-                },
+                { name: "order_qty", type: "text", width: 100, title: "Order Qty", align: "right" },
+                { name: "order_bin", type: "text", width: 120, title: "Order Bin", editing: false },
+                { name: "desc", type: "text", width: 200, title: "Comment", align: "center", editing: true },
+                { name: "product_order", type: "text", width: 150, title: "{% trans "Product Order" %}", validate: "required", editing: false, align: "center" },
+                { name: "purchase_no", type: "text", width: 130, title: "Purchase No", editing: false, align: "center" },
+                { name: "version_no", type: "text", width: 80, title: "Version No", align: "center", editing: false },
+                { name: "version_seq", type: "number", width: 80, title: "Version Seq", editing: false, align: "center" },
+                { name: "size", type: "text", width: 50, title: "Size", editing: false, align: "center" },
+                { name: "purchase_unit", type: "text", width: 100, title: "Purchase Unit", editing: false },
             ]
         });
 
         $(".jsgrid-grid-body").on("click", ".jsgrid-button", function(e) {
             // Cách để kiểm soát hành động sao chép
-            if ($(this).text() === "複製") {
+            if ($(this).text() === "Copy") {
                 // Ngừng sự kiện nếu không muốn thông báo khi Enter được nhấn
                 e.stopPropagation();
                 e.preventDefault();
@@ -469,7 +276,7 @@
 
             // 使用 Ajax 發送數據到後端
             $.ajax({
-                url: '{% url 'stock_in_post' %}',  // 設置後端接收數據的 URL
+                url: '{% url 'packing_material_stock_out_post' %}',  // 設置後端接收數據的 URL
                 type: 'POST',
                 contentType: 'application/json',
                 data: jsonData,
@@ -544,7 +351,7 @@
           </div>
         <hr />
         <div style="text-align: center" class="p-3">
-            <button id="postDataButton">{% trans "Post" %}</button>
+            <button id="postDataButton" class="btn btn-info btn-lg">{% trans "Post" %}</button>
         </div>
     </form>
 
