--- a/src/VNEDC/warehouse/templates/warehouse/search_bin_history.html
+++ b/src/VNEDC/warehouse/templates/warehouse/search_bin_history.html
@@ -86,126 +86,94 @@
         </form>
     </div>
 
-        <!-- Table for displaying results -->
-        <div class="table-container justify-content-center">
-
-            <!-- BIN VALUES TABLE -->
-            <div style="overflow-y: auto; height: 200px;" class="scroll bin_value">
-                <table class="table table-striped table-bordered col-md-6 A">
-                    <thead>
-                        <tr>
-                            <th></th>
-                            <th>Bin</th>
-                            <th>PO</th>
-                            <th>Size</th>
-                            <th>Qty</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% if result_value %}
-                        {% for record in result_value %}
-                        <tr>
-                            <td style="width: 20px">{{ page_obj.start_index|add:forloop.counter0 }}</td>
-                            <td>{{ record.bin }}</td>
-                            <td>{{ record.po_no }}</td>
-                            <td>{{ record.size }}</td>
-                            <td>{{ record.qty}}</td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="8" class="text-center">No data available</td>
-                        </tr>
-                        {% endfor %}
-                    {% endif %}
-                    </tbody>
-                </table>
-            </div>
-
-            <!--BIN HISTORIES TABLE -->
-
-            <div style="height: 300px; overflow-y: auto;" class="scroll bin_hist">
-                <table class="table table-striped table-bordered B">
-                    <thead>
-                        <tr >
-                            <th></th>
-                            <th style="position: sticky">Bin</th>
-                            <th>PO</th>
-                            <th>Size</th>
-                            <th>Type</th>
-                            <th>Old Qty</th>
-                            <th>Action</th>
-                            <th>New Qty</th>
-                            <th>Create at</th>
-                            <th>Create by</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    {% if result_history %}
-                        {% for record in result_history %}
-                        <tr>
-                            <td style="width: 20px">{{ page_obj.start_index|add:forloop.counter0 }}</td>
-                            <td>{{ record.bin }}</td>
-                            <td>{{ record.po_no }}</td>
-                            <td>{{ record.size }}</td>
-                            <td>{{ record.act_type }}</td>
-                            <td>{{ record.old_qty|intcomma }}</td>
-                            <td>
-                                {% if record.act_qty > 0 %}
-                                    +{{ record.act_qty|intcomma }}
-                                {% else %}
-                                    {{ record.act_qty|intcomma }}
-                                {% endif %}
-                            </td>
-                            <td>{{ record.new_qty|intcomma }}</td>
-                            <td>{{ record.create_at|date:"d/m/Y H:i" }}</td>
-                            <td>{{ record.create_by.username }}</td>
-                        </tr>
-                        {% empty %}
-                        <tr>
-                            <td colspan="8" class="text-center">No data available</td>
-                        </tr>
-                        {% endfor %}
-                    {% endif %}
-                    </tbody>
-                </table>
-            </div>
-
-            <!-- Pagination -->
-{#            <div class="pagination-container">#}
-{#                <span class="pagination">#}
-{#                    {% if page_obj.has_previous %}#}
-{#                        <a href="?page=1&bin={{ request.GET.bin }}&po_no={{ request.GET.po_no }}&size={{ request.GET.size }}&from_date{{ request.GET.from_date }}&to_date{{ request.GET.to_date }}" class="mr-3 mt-1">&laquo; First</a>#}
-{#                        <a href="?page={{ page_obj.previous_page_number }}&bin={{ request.GET.bin }}&po_no={{ request.GET.po_no }}&size={{ request.GET.size }}&from_date{{ request.GET.from_date }}&to_date{{ request.GET.to_date }}" class="mr-3 mt-1">Previous</a>#}
-{#                    {% endif %}#}
-{##}
-{#                    {% for num in range_pages %}#}
-{#                        {% if num == '...' %}#}
-{#                            <li class="page-item disabled"><span class="page-link">...</span></li>#}
-{#                        {% elif num == page_obj.number %}#}
-{#                            <li class="page-item active"><span class="page-link">{{ num }}</span></li>#}
-{#                        {% else %}#}
-{#                            <li class="page-item">#}
-{#                                <a class="page-link" href="?page={{ num }}&bin={{ request.GET.bin }}&po_no={{ request.GET.po_no }}&size={{ request.GET.size }}&from_date{{ request.GET.from_date }}&to_date{{ request.GET.to_date }}">{{ num }}</a>#}
-{#                            </li>#}
-{#                        {% endif %}#}
-{#                    {% endfor %}#}
-{##}
-{#                    {% if page_obj.has_next %}#}
-{#                        <a href="?page={{ page_obj.next_page_number }}&bin={{ request.GET.bin }}&po_no={{ request.GET.po_no }}&from_date{{ request.GET.from_date }}&to_date{{ request.GET.to_date }}" class="mr-3 ml-3 mt-1">Next</a>#}
-{#                        <a href="?page={{ page_obj.paginator.num_pages }}&bin={{ request.GET.bin }}&po_no={{ request.GET.po_no }}&size={{ request.GET.size }}&from_date{{ request.GET.from_date }}&to_date{{ request.GET.to_date }}" class="mr-3 mt-1">Last &raquo;</a>#}
-{#                    {% endif %}#}
-{#                </span>#}
-{#            </div>#}
-
-
+    <!-- Table for displaying results -->
+    <div class="table-container justify-content-center">
+        <h2>Current Inventory</h2>
+        <!-- BIN VALUES TABLE -->
+        <div style="overflow-y: auto; height: 200px;" class="scroll bin_value">
+            <table class="table table-striped table-bordered col-md-6 A">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th>{% trans "Location" %}</th>
+                        <th>{% trans "Product Order" %}</th>
+                        <th>{% trans "Purchase Order" %}</th>
+                        <th>{% trans "Version No" %}</th>
+                        <th>{% trans "Version Sequence" %}</th>
+                        <th>{% trans "Size" %}</th>
+                        <th>{% trans "Qty" %}</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% if result_value %}
+                    {% for record in result_value %}
+                    <tr>
+                        <td style="width: 20px">{{ page_obj.start_index|add:forloop.counter0 }}</td>
+                        <td>{{ record.bin }}</td>
+                        <td>{{ record.product_order }}</td>
+                        <td>{{ record.purchase_no }}</td>
+                        <td>{{ record.version_no }}</td>
+                        <td>{{ record.version_seq }}</td>
+                        <td>{{ record.size }}</td>
+                        <td>{{ record.qty}}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="8" class="text-center">No data available</td>
+                    </tr>
+                    {% endfor %}
+                {% endif %}
+                </tbody>
+            </table>
         </div>
 
-{#    {% elif message %}#}
-{#        <div class="alert alert-warning text-center mt-2">#}
-{#            {{ message }}#}
-{#        </div>#}
-{#    {% endif %}#}
-
+        <!--BIN HISTORIES TABLE -->
+        <h2>History</h2>
+        <div style="height: 300px; overflow-y: auto;" class="scroll bin_hist">
+            <table class="table table-striped table-bordered B">
+                <thead>
+                    <tr >
+                        <th></th>
+                        <th style="position: sticky">{% trans "Location" %}</th>
+                        <th>{% trans "Product Order" %}</th>
+                        <th>{% trans "Purchase Order" %}</th>
+                        <th>{% trans "Size" %}</th>
+                        <th>+</th>
+                        <th>-</th>
+                        <th>{% trans "Remain Qty" %}</th>
+                        <th>Action</th>
+                        <th>{% trans "Unit" %}</th>
+                        <th>Create at</th>
+                        <th>Create by</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% if result_history %}
+                    {% for record in result_history %}
+                    <tr>
+                        <td style="width: 20px">{{ page_obj.start_index|add:forloop.counter0 }}</td>
+                        <td>{{ record.bin }}</td>
+                        <td>{{ record.product_order }}</td>
+                        <td>{{ record.purchase_no }}</td>
+                        <td>{{ record.size }}</td>
+                        <td>{{ record.plus_qty }}</td>
+                        <td>{{ record.minus_qty }}</td>
+                        <td>{{ record.remain_qty }}</td>
+                        <td>{{ record.mvt }}</td>
+                        <td>{{ record.purchase_unit }}</td>
+                        <td>{{ record.create_at|date:"d/m/Y H:i" }}</td>
+                        <td>{{ record.create_by.username }}</td>
+                    </tr>
+                    {% empty %}
+                    <tr>
+                        <td colspan="8" class="text-center">No data available</td>
+                    </tr>
+                    {% endfor %}
+                {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 
 {% endblock %}
