--- a/src/VNEDC/collection/templates/collection/oee_report.html
+++ b/src/VNEDC/collection/templates/collection/oee_report.html
@@ -477,7 +477,7 @@
                                                     <span>&nbsp;&nbsp;(&nbsp;&nbsp;</span>
                                                     <span class="col-md-2 block-item">{{ data.line_name }} 计数机数量</span>
                                                     <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
-                                                    <span class="col-md-2 block-item">{{ data.line_name }} 二手</span>
+                                                    <span class="col-md-2 block-item">{{ data.line_name }} 二級品</span>
                                                     <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
                                                     <span class="col-md-2 block-item">{{ data.line_name }} Scrap</span>
                                                     <span>&nbsp;&nbsp;)&nbsp;&nbsp;</span>
@@ -516,7 +516,7 @@
                                                     <span>&nbsp;&nbsp;(&nbsp;&nbsp;</span>
                                                     <span class="col-md-2 block-item">{{ data.line_name }} 计数机数量</span>
                                                     <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
-                                                    <span class="col-md-2 block-item">{{ data.line_name }} 二手</span>
+                                                    <span class="col-md-2 block-item">{{ data.line_name }} 二級品</span>
                                                     <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
                                                     <span class="col-md-2 block-item">{{ data.line_name }} Scrap</span>
                                                     <span>&nbsp;&nbsp;)&nbsp;&nbsp;</span>
@@ -596,7 +596,7 @@
                                         <span>&nbsp;&nbsp;(&nbsp;&nbsp;</span>
                                         <span class="col-md-2 block-item block-color-green action-button">计数机数量（IPQC)</span>{# Counting Machine Qty (lPQc) Second #}
                                         <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
-                                        <span class="col-md-1 block-item block-color-green action-button">二手</span>
+                                        <span class="col-md-1 block-item block-color-green action-button">二級品</span>
                                         <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
                                         <span class="col-md-1 block-item block-color-green action-button">Scrap</span>
                                         <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
@@ -615,7 +615,7 @@
                                         <span>&nbsp;&nbsp;(&nbsp;&nbsp;</span>
                                         <span class="col-md-2 block-item block-color-green action-button">计数机数量（IPQC)</span>{# Counting Machine Qty (lPQc) Second #}
                                         <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
-                                        <span class="col-md-1 block-item block-color-green action-button">二手</span>
+                                        <span class="col-md-1 block-item block-color-green action-button">二級品</span>
                                         <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
                                         <span class="col-md-1 block-item block-color-green action-button">Scrap</span>
                                         <span>&nbsp;&nbsp;+&nbsp;&nbsp;</span>
